tests/NormalTests/paczka2/big_fuzzy/41438041.err
Error in line 7: S651 A687 58,60
Error in line 8: AB2wj7 A42 65,0
Error in line 22: AB2wj7 S651 22,00
Error in line 26: S651 S651 29,1
Error in line 38: BqsP84CETQw A687 46,0
Error in line 15: AB2wj7 S651 7,3
Error in line 44: scLXW S651 24,9
Error in line 59: scLXW A687 15,2
Error in line 66: scLXW A42 25,5
Error in line 76: m1bZu A42 47,6
Error in line 85: BqzNGNTwb3f S651 65,3
Error in line 86: BqzNGNTwb3f A687 60,0
Error in line 97: S651 S651 65,5
Error in line 130: m1bZu S651 287,7
Error in line 140: S651 S651 34,3
Error in line 136: BqsP84CETQw S651 58,0
Error in line 142: scLXW S651 31,0
Error in line 150: ClDEK A687 34,7
Error in line 170: scLXW A42 72,1
Error in line 179: ClDEK A705 100,60
Error in line 198: S651 A705 49,5
Error in line 207: ClDEK A705 13,2
Error in line 212: ClDEK S651 1,0
Error in line 209: BqzNGNTwb3f S651 68,9
Error in line 225: BqsP84CETQw A705 51,7
Error in line 231: S651 A42 21,54
Error in line 234: ClDEK A705 46,2
Error in line 218: scLXW A42 108,8
